# Independent-Chess

./: README.md
src/chess/: CMakeLists.txt  chess.qrc  gameentity.cpp  gameentity.h  main.cpp  mainwindow.cpp  mainwindow.h
src/chess/chess/: chessboard.cpp  chessboard.h  chesspiece.cpp  chesspiece.h
src/chess/global/: globaldata.cpp  globaldata.h
src/chess/network/: chessinternet.cpp  chessinternet.h  chesslocal.cpp  chesslocal.h
src/chess/player/: aiplayer.cpp  aiplayer.h  peopleplayer.cpp  peopleplayer.h  player.cpp  player.h
src/chess/utils/: utils.cpp  utils.h
